Improve crash report exception recovery, update stuff.